@@ -8,17 +8,20 @@ object BuildSettings {
   val filter = { (ms: Seq[(File, String)]) =>
     ms filter {
       case (file, path) =>
-        path != "logback.xml" && !path.startsWith("toignore") && !path.startsWith("samples")
+        path != "logback.xml" && !path.startsWith("toignore") &&
+        !path.startsWith("samples")
     }
   }
 
-  val buildSettings = Defaults.coreDefaultSettings ++ Seq(
+  val baseSettings = Seq(
     organization := "org.reactivemongo",
     version := buildVersion,
+    shellPrompt := ShellPrompt.buildShellPrompt)
+
+  val buildSettings = Defaults.coreDefaultSettings ++ baseSettings ++ Seq(
     scalaVersion := "2.11.7",
     crossScalaVersions := Seq("2.11.7", "2.10.5"),
     crossVersion := CrossVersion.binary,
-    javaOptions in test ++= Seq("-Xmx512m", "-XX:MaxPermSize=512m"),
     //fork in Test := true, // Don't share executioncontext between SBT CLI/tests
     scalacOptions in Compile ++= Seq(
       "-unchecked", "-deprecation", "-target:jvm-1.6", "-Ywarn-unused-import"),
@@ -33,7 +36,6 @@ object BuildSettings {
         opts.filter(_ != "-Ywarn-unused-import")
       } else opts
     },
-    shellPrompt := ShellPrompt.buildShellPrompt,
     mappings in (Compile, packageBin) ~= filter,
     mappings in (Compile, packageSrc) ~= filter,
     mappings in (Compile, packageDoc) ~= filter) ++
@@ -159,7 +161,7 @@ object Resolvers {
 }
 
 object Dependencies {
-  val netty = "io.netty" % "netty" % "3.10.4.Final" cross CrossVersion.Disabled
+  val netty = "io.netty" % "netty" % "3.10.5.Final" cross CrossVersion.Disabled
 
   val akkaActor = "com.typesafe.akka" %% "akka-actor" % "2.3.6"
 
@@ -187,6 +189,9 @@ object ReactiveMongoBuild extends Build {
   import Resolvers._
   import Dependencies._
   import sbtunidoc.{ Plugin => UnidocPlugin }
+  import sbtassembly.{
+    AssemblyKeys, MergeStrategy, PathList, ShadeRule
+  }, AssemblyKeys._
   import com.typesafe.tools.mima.core._, ProblemFilters._, Problem.ClassVersion
   import com.typesafe.tools.mima.plugin.MimaKeys.{
     binaryIssueFilters, previousArtifacts
@@ -201,15 +206,39 @@ object ReactiveMongoBuild extends Build {
       settings = buildSettings ++ (publishArtifact := false) ).
       settings(UnidocPlugin.unidocSettings: _*).
       settings(previousArtifacts := Set.empty).
-    aggregate(driver, bson, bsonmacros)
+      aggregate(driver, bson, bsonmacros)
+
+  lazy val shadedDeps = 
+    Project(
+      s"$projectPrefix-Shaded",
+      file("shaded"),
+      settings = baseSettings).settings(
+        previousArtifacts := Set.empty,
+        crossPaths := false,
+        autoScalaLibrary := false,
+        libraryDependencies ++= Seq(netty),
+        assemblyShadeRules in assembly := Seq(
+          ShadeRule.rename("org.jboss.netty.**" -> "shaded.netty.@1").inAll
+        ),
+        publish in Compile := publish.dependsOn(assembly),
+        publishLocal in Compile := publishLocal.dependsOn(assembly),
+        packageBin in Compile := target.value / (
+          assemblyJarName in assembly).value)
 
   lazy val driver = Project(
     projectPrefix,
     file("driver"),
     settings = buildSettings ++ Seq(
       resolvers := resolversList,
+      compile in Compile <<= (
+        compile in Compile).dependsOn(assembly in shadedDeps),
+      unmanagedJars in Compile := {
+        val shadedDir = (target in shadedDeps).value
+        val shadedJar = (assemblyJarName in (shadedDeps, assembly)).value
+
+        Seq(Attributed(shadedDir / shadedJar)(AttributeMap.empty))
+      },
       libraryDependencies ++= Seq(
-        netty,
         akkaActor,
         playIteratees,
         commonsCodec,
@@ -462,7 +491,7 @@ object ReactiveMongoBuild extends Build {
     file("macros"),
     settings = buildSettings ++ Seq(
       libraryDependencies +=
-        "org.scala-lang" % "scala-compiler" % scalaVersion.value
+        "org.scala-lang" % "scala-compiler" % scalaVersion.value % "provided"
     )).
     settings(libraryDependencies += specs).
     dependsOn(bson)
@@ -487,7 +516,6 @@ object ReactiveMongoBuild extends Build {
       libraryDependencies ++= Seq(
         "org.reactivemongo" %% "reactivemongo" % buildVersion % "provided",
         playIteratees, specs) ++ logApi
-    ).
-    settings(net.virtualvoid.sbt.graph.Plugin.graphSettings: _*)
+    )
 
 }
